--- a/PrototypePlayground/Packages/manifest.json
+++ b/PrototypePlayground/Packages/manifest.json
@@ -6,6 +6,7 @@
     "com.unity.package-manager-ui": "2.0.7",
     "com.unity.postprocessing": "2.3.0",
     "com.unity.probuilder": "4.2.3",
+    "com.unity.progrids": "3.0.3-preview.6",
     "com.unity.purchasing": "2.0.3",
     "com.unity.textmeshpro": "1.3.0",
     "com.unity.modules.ai": "1.0.0",
