--- a/.gitattributes
+++ b/.gitattributes
@@ -1,5 +1,5 @@
 # Auto detect text files and perform LF normalization
 * text=auto
-
-*/cudnn64_7.dll
-*/Server_Train/LightingData.asset
+*/cudnn64_7.dll filter=lfs diff=lfs merge=lfs -text
+*/Server_Train/LightingData.asset filter=lfs diff=lfs merge=lfs -text
+*[[:space:]]text=auto filter=lfs diff=lfs merge=lfs -text
